# house-price-prediction-ai

./: .gitignore  README.md  package-lock.json  pyproject.toml
backend/: .env.example  pyproject.toml  test_predictor.py
backend/app/: main.py
backend/app/api/: prediction.py
backend/app/core/: config.py
backend/app/models/: prediction.py
backend/app/services/: predictor.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: icons.tsx
frontend/components/ui/shared/: form-field.tsx  section-title.tsx
frontend/features/ prediction/components/: prediction-form.tsx  prediction-page.tsx
frontend/features/landing/components/: footer.tsx  hero.tsx  landing-page.tsx  navbar.tsx  stats.tsx
frontend/features/prediction/api/: prediction-api.ts
frontend/features/prediction/components/: prediction-form.tsx  prediction-page.tsx  prediction-result.tsx
frontend/features/prediction/hooks/: usePrediction.ts
frontend/features/prediction/schema/: prediction.schema.ts
frontend/features/prediction/types/: prediction.types.ts
frontend/providers/: query-provider.tsx
frontend/styles/: theme.ts
ml/: config.py  pipeline.py  train.py
models/: house_price_pipeline.pkl
