[project]
name = "house-price-preduction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.139.0",
    "ipykernel>=7.3.0",
    "joblib>=1.5.3",
    "jupyterlab>=4.6.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.51.0",
]